# git-ignore-builder

./: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  constants.rs  lib.rs  prelude.rs
core/src/config/: entry.rs  tests.rs
core/src/config/entry/: getter.rs  setter.rs
src/: cli.rs  constants.rs  host.rs  main.rs  prelude.rs  repository.rs  state.rs  ui.rs
src/host/: events.rs  terminal.rs
src/host/events/: input.rs
src/model/: configuration.rs  repository.rs
src/repository/: builder.rs  mod.rs
src/ui/: application.rs  event_loop.rs  mod.rs  widgets.rs  window.rs
src/ui/application/: builder.rs  exit_handler.rs  mod.rs
src/ui/window/: builder.rs  prelude.rs
