[package]
name = "gitignorebuilder"
version = "0.1.0"
license = "MIT"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
description = "A tool to build gitignore files from github's gitignore repository"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.8"
toml = "0.5.6"
anyhow = "1.0.32"
thiserror = "1.0.20"
derive_more = "0.99.9"
once_cell = "1.4.0"
dirs = "3.0.1"

[dependencies.async-std]
version = "1.6.2"
features = [
    "attributes",
    "unstable",
]

[dependencies.clap]
version = "~3.0.0-beta.1"
features = [
  "wrap_help"
]

[dependencies.crossterm]
version = "0.17"
features = ["event-stream"] 

[dependencies.serde]
version = "1.0.114"
features = [
  "derive"
]

[dependencies.tui]
version = "0.10.0"
default-features = false
features = [
  "crossterm"
]
