[package]
authors     = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
description = "A tool to build gitignore files from github's gitignore repository"
edition     = "2018"
license     = "MIT"
name        = "git-ignore-builder"
version     = "0.1.0"

[workspace]
members = ["core"]

[dependencies]
anyhow      = "1.0.32"
derive_more = "0.99.9"
dirs        = "3.0.1"
enumflags2  = "0.6.4"
once_cell   = "1.4.0"
pin-project = "0.4.23"
thiserror   = "1.0.20"

  [dependencies.async-std]
  features = ["attributes", "unstable"]
  version  = "1.6.2"

  [dependencies.git-ignore-builder-core]
  path = "./core"

  [dependencies.clap]
  features = ["wrap_help"]
  version  = "3.0.0-beta.1"

  [dependencies.crossterm]
  version = "0.17"

  [dependencies.tui]
  default-features = false
  features         = ["crossterm"]
  version          = "0.10.0"
