[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "git-ignore-builder-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0.32"
derive_more = "0.99.9"
dirs        = "3.0.1"
enumflags2  = "0.6.4"
git2        = "0.13.8"
once_cell   = "1.4.0"
pin-project = "0.4.23"
regex       = "1.3.9"
thiserror   = "1.0.20"
tempfile = "3.1.0"

    [dependencies.async-std]
    features = ["unstable", "attributes"]
    version  = "1.6.2"

[dev-dependencies]
expectest         = "0.12.0"
quickcheck_macros = "0.9.1"
rstest            = "0.6.4"
rstest_reuse      = "0.1.0"

    [dev-dependencies.quickcheck]
    features = ["unstable"]
    version  = "0.9.2"
